; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos5433_drm_decon.c_decon_shadow_protect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos5433_drm_decon.c_decon_shadow_protect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decon_context = type { i32 }

@DECON_SHADOWCON = common dso_local global i32 0, align 4
@SHADOWCON_PROTECT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.decon_context*, i32)* @decon_shadow_protect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decon_shadow_protect(%struct.decon_context* %0, i32 %1) #0 {
  %3 = alloca %struct.decon_context*, align 8
  %4 = alloca i32, align 4
  store %struct.decon_context* %0, %struct.decon_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.decon_context*, %struct.decon_context** %3, align 8
  %6 = load i32, i32* @DECON_SHADOWCON, align 4
  %7 = load i32, i32* @SHADOWCON_PROTECT_MASK, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  %10 = zext i1 %9 to i64
  %11 = select i1 %9, i32 -1, i32 0
  %12 = call i32 @decon_set_bits(%struct.decon_context* %5, i32 %6, i32 %7, i32 %11)
  ret void
}

declare dso_local i32 @decon_set_bits(%struct.decon_context*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
